pages/2019/styles/layout/_header.scss
.b-header{
  padding: 10px;
  display: flex;
  flex-wrap: wrap;

  &__logo{
    flex: 0;
  }

  &__nav{
    flex: 1;
    align-self: flex-end;
    margin: 0 20px;
  }

  &__mobile-trigger{
    position: absolute;
    top: 10px;
    right: 10px;
  }

  &__link-to-nav{
    float: right;
    color: #fff;
    background: #4e4e4e;
    text-decoration: none;
    padding: 0 10px;
    font-size: 12px;
    font-weight: bold;
    line-height: 22px;
    height: 22px;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;

    &:hover,
    &:focus {
      color: #1c1c1c;
      background: #ccc;
    }
  }

}

.b-logo{

  &__img{
    width: 18em;
  }
}

@media screen and (min-width: $mobile-navi-max) {
  .b-header{
    &__mobile-trigger{
      display: none;
    }
  }
}

@media screen and (min-width: 960px ){
  .b-header{
    margin: auto;
    width: 960px;
  }
}

@media screen and (max-width: 960px ) and (min-width: 760px){
  .b-logo {
    &__img{
      width: 15rem;
    }
  }
}

@media screen and (max-width: 840px ){
  .b-logo{
    &__img{
      width: 15rem;
    }
  }

}

.rectangle {
  height: 14rem;
  margin-top: 1%;
  background: rgba(#23447a, 0.65);
  width: 100%;
}

